# MathInterpreter

./: .gitignore  Cargo.toml  README.md
src/: __lib.rs  _lib.rs  ast.rs  ast_walker.rs  cli_core.rs  cmd_line.rs  conc_once_cell.rs  equation_evaluator.rs  equation_simplifier.rs  equation_solver.rs  error.rs  lexer.rs  main.rs  parser.rs  shared.rs  sized_box.rs  span.rs  token_stream.rs  utils.rs
src/eval/: __lib.rs  _lib.rs  equation_solver.rs  lexer.rs  main.rs  mod.rs  parser.rs  shared.rs  utils.rs
src/graphics/: mod.rs  utils.rs
