[package]
name = "MathInterpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# provides 96 bit floating point numbers
# rust_decimal = { version = "1.27.0", features = ["maths"] } # FIXME: Use an arbitrary decimal crate instead!
# rust_decimal_macros = "1.27.0"
# f256 = "0.2.0"
arpfloat = "0"
colored = "2"
# used for factorial calculations for floating point numbers
statrs = "0.17"
crossterm = "0.28"
anyhow = "1"
clitty = { git = "https://github.com/terrarier2111/CLItty" }
swap-arc = "0.1.1"
# rustc_apfloat = "0.2.0+llvm-462a31f5a5ab"